testsuite/tests/parsing/arrow_ambiguity.compilers.reference
File "arrow_ambiguity.ml", line 29, characters 0-0:
Error: Syntax error
